# smartgarden-hub

./: .gitignore  .notes.swp  Cargo.toml  Rocket.toml  db.sqlite  notes  smartgardenhub.service  start.sh
src/: main.rs
