[package]
name = "hub"
version = "0.1.0"
authors = ["Kyle Kloberdanz <kyle.g.kloberdanz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rusqlite = "0.18.0"
reqwest = "0.9.15"
chrono = "0.4.6"
time = "0.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
